Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12323

QML mouse events can not be propagated

XMLWordPrintable

    • 5dd0dfcd7a079065f99c6149c15b58e69f302729

      It should be possible to start a drag from anywhere in the blue rectangle, and it should be possible to click the yellow rectangle. Apparently the yellow rectangle does not get the event.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            steveire Stephen Kelly (Personal)
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes