Allow MouseArea dragging to filter mouse events from descendants This allows dragging a MouseArea that contains a clickable MouseArea, for example.

Task-number: QTBUG-12323
Reviewed-by: Michael Brasser